# dotfiles

./: .gitignore  Dockerfile.manjaro  README.md  bashrc  bashrc.colors  break_links  dotfiles.local  emacs  gitconfig  i_git  install  install.conf.yaml  install.source  install_finalize  install_os_linux  mplayer_config  mplayer_input.conf  os_linux_install  rc.conf  rifle.conf  snl  spacemacs  spacevim  tmux.conf  tmux.conf.2.4  vimperatorrc  vimrc  vimrc.functions  vimrc.plugins  xonsh.config.json  yaourtrc
UltiSnips/: python.snippets  sh.snippets
autostart_desktop_shortcuts/: tk_xmodmap_keyboard.desktop
bash_scripts/: create_bash.sh  install_cygwin.sh  txzm.sh
dotfiles/: bash_profile.snippet  bashrc  bashrc.old  bashrc.snippet  broot.conf.hjson  config.fish  environment.snippet  etc_profile.snippet  gitconfig  joplin.keymap.json  kitty.conf  kitty_for_tmux.conf  minttyrc  mplayer_input.conf  mpv_input.conf  pandas_with_family.py  rifle.conf  rifle.conf.snippet  spacemacs  spacemacs.backup.new  spacemacs.backup.new2  spacemacs.backup.old  tmux.conf.2.4  tmux.conf_2.8  tmux.conf_2.9  tmux.old  vimperatorrc  vimrc  vimrc.functions  vimrc.kitty  (+5 more)
setup_new_linux/: README.md  pipx_json  pyproject.toml
setup_new_linux/setup_new_linux/: __init__.py  __main__.py  dos.py  dotfiles.py  info.py  packages.py  services.py
setup_new_linux/setup_new_linux/classes/: dotfilesc.py  package_managers.py  packagesc copy.py  packagesc.py  servicesc.py
setup_new_linux/setup_new_linux/utils/: constants.py  helpers.py  setup.py
setup_new_linux/tests/: test_dotfiles.py  tmp.py
(+33 files in other folders)
