[tool.poetry]
name = "setup-new-linux"
version = "0.1.0"
description = ""
authors = ["Kossak <kossak.git@gmail.com>"]
readme = "README.md"
packages = [{include = "setup_new_linux"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
